admin/src/components/routes/PipelineWrapper/Pipeline.css
/* ... */
.pipeline__transformation-output-property-description {
	margin-left: -4px;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}

.pipeline__transformation-output-property--map > sl-input {
	display: inline-block;
	max-width: 150px;
}

.pipeline__transformation-output-property--map > sl-input::part(input) {
	font-family: var(--monospace-fonts);
}

.pipeline__transformation-output-property--map .pipeline__transformation-output-property-type {
	margin-left: 8px !important;
}

.pipeline__transformation-output-property-remove::part(base),
.pipeline__transformation-output-property-add::part(base) {
	border: 0 !important;
	padding: 0 !important;
	cursor: pointer;
}

.pipeline__transformation-output-property-remove[disabled]::part(base),
.pipeline__transformation-output-property-add[disabled]::part(base) {
	cursor: not-allowed;
}

.pipeline__transformation-output-property-remove::part(label),
.pipeline__transformation-output-property-add::part(label) {
	display: none;
}

.pipeline__transformation-output-property-remove sl-icon,
.pipeline__transformation-output-property-add sl-icon {
	font-size: 20px;
	width: 25px;
	transition: color 0.3s;
}

.pipeline__transformation-output-property-remove:hover sl-icon {
	color: var(--sl-color-danger-600);
}

.pipeline__transformation-output-property-add sl-icon {
	color: var(--sl-color-primary-600);
}

.pipeline__transformation-output-property-remove {
	margin-right: 4px;
}

.pipeline__transformation-output-property-error {
	position: absolute;
	font-size: 12px;
	color: var(--sl-color-danger-500);
	line-height: 1.6;
	margin-left: 10px;
	margin-top: -2px;
}

.pipeline__transformation-output-property-name-copy {
	position: relative;
	display: inline-flex;
	align-items: baseline;
}

.pipeline__transformation-output-property-copy {
	position: absolute;
	inset: 0;
	z-index: 1;
	display: block;
}

.pipeline__transformation-output-property-copy::part(button) {
	padding: 0;
	width: 100%;
	height: 100%;
	background: transparent;
	border: 0;
	cursor: pointer;
}

.pipeline__transformation-output-property-copy::part(copy-icon),
.pipeline__transformation-output-property-copy::part(success-icon),
.pipeline__transformation-output-property-copy::part(error-icon) {
	display: none;
}

.pipeline__transformation-output-property-required {
	color: var(--sl-color-danger-500);
	font-weight: 500;
	font-size: 11px;
}

/* The output property must be disabled to avoid tab focus but it must not
inherit the disabled style */
.pipeline__transformation-output-property[disabled]::part(base) {
	cursor: default;
	background-color: transparent !important;
	border: 0 !important;
	opacity: 1 !important;
}

.pipeline__transformation-output-property--indented::before {
	content: '';
	display: block;
	position: absolute;
	width: 15px;
	height: 15px;
	border-left: 2px solid var(--sl-color-neutral-400);
	border-bottom: 2px solid var(--sl-color-neutral-400);
	top: 40%;
	transform: translateY(-50%) translate(-30px);
	border-bottom-left-radius: 3px;
}

.pipeline .section__pipelines,
.pipeline .section__pipelines sl-menu {
	width: 300px;
}

.pipeline .section__pipelines sl-dropdown,
.pipeline .section__pipelines sl-button,
.pipeline .section__pipelines sl-dropdown::part(popup) {
	width: 100%;
}

.pipeline__transformation-language-deprecated {
	margin-top: 15px;
}

.pipeline__transformation-language-deprecated::part(base) {
	background-color: transparent;
	border: 0;
	color: var(--sl-color-neutral-600);
}

.pipeline__transformation-language-deprecated::part(icon) {
	padding: 0;
	padding-right: 10px;
}

.pipeline__transformation-language-deprecated::part(message) {
	padding: 0;
}

.pipeline__transformation-language-deprecated sl-icon {
	color: var(--sl-color-danger-600);
}

.pipeline__transformation-function-minimized .editor-wrapper__switch-language-dropdown > sl-menu {
	display: none;
}

.transformation-box {
	border-radius: 10px;
	background-color: var(--bg-primary);
	border: 1px solid var(--sl-color-neutral-200);
	min-height: 100%;
}

.transformation-box--function {
	height: 100%;
}

.transformation-box--mappings {
	background-color: var(--bg-gray);
}

.transformation-box__header {
	background-color: var(--bg-primary);
	border-radius: 10px;
	padding: 20px 30px;
	border-bottom-left-radius: 0;
	border-bottom-right-radius: 0;
	color: var(--sl-color-neutral-500);
	font-size: 13px;
	display: flex;
	justify-content: space-between;
	align-items: center;
	gap: 10px;
}

.transformation-box__header-title {
	display: flex;
	gap: 11px;
	align-items: center;
}

.transformation-box__header-heading {
	color: var(--sl-color-neutral-700);
	font-size: 15px;
	font-weight: 500;
}

.transformation-box__header-description {
	color: var(--sl-color-neutral-600);
	font-size: 12px;
	display: -webkit-box;
	-webkit-line-clamp: 2;
	line-clamp: 2;
	-webkit-box-orient: vertical;
	overflow: hidden;
	text-overflow: ellipsis;
	line-height: 1.2;
}

.transformation-box__header-icon {
	display: flex;
	justify-content: center;
	align-items: center;
}

.transformation-box__header-title img {
	height: 25px;
	width: auto;
}

.transformation-box__header-icon > sl-icon {
	font-size: 20px;
}

.transformation-box__header-buttons sl-icon {
	font-size: 14px;
}

.transformation-box__header-buttons img {
	max-height: 18px;
	width: auto;
}

.transformation-box__header-buttons sl-button::part(base) {
	padding-left: 10px;
	padding-right: 10px;
}

.transformation-box__not-configured-tooltip::part(body) {
	padding: 10px 12px;
	max-width: 250px;
}

.transformation-box__header-right-buttons {
	display: flex;
	align-items: center;
	gap: 20px;
	margin-left: auto;
}

.transformation-box__function-settings {
	position: relative;
	visibility: hidden;
	opacity: 0;
	transition: opacity 0s;
}

.transformation-box__function-settings--visible {
	visibility: visible;
	opacity: 1;
	transition: opacity 0s 0.5s;
}

.transformation-box__function-settings::part(panel) {
	box-shadow: none;
}
/* ... */

